// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button rendering Renders correctly when given a color 1`] = `
"  [31m╭──────────────────────────────────────────────────────────────────────────────────────────────╮[39m
  [31m│[39m [31mSelected[39m                                                                                     [31m│[39m
  [31m╰──────────────────────────────────────────────────────────────────────────────────────────────╯[39m"
`;

exports[`Button rendering Renders correctly when not selected 1`] = `
"  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ Not Selected                                                                                 │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Button rendering Renders correctly when selected 1`] = `
"  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ [7mSelected[27m                                                                                     │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Button rendering Renders correctly when selected and given a color 1`] = `
"  [31m╭──────────────────────────────────────────────────────────────────────────────────────────────╮[39m
  [31m│[39m [7m[31mSelected[39m[27m                                                                                     [31m│[39m
  [31m╰──────────────────────────────────────────────────────────────────────────────────────────────╯[39m"
`;
